k3s/apps/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: infrastructure
  labels:
    app: registry
spec:
  type: ClusterIP
  ports:
  - port: 5000
    protocol: TCP
  selector:
    app: registry
