k3s/apps/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: infrastructure
  labels:
    app.kubernetes.io/name: registry
spec:
  rules:
    - host: "registry.home"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ui
  namespace: infrastructure
  labels:
    app.kubernetes.io/name: registry-ui
spec:
  rules:
    - host: "dashboard.registry.home"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: registry-ui
                port:
                  number: 80
